--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,46 +10,9 @@
     tools:context=".MainActivity">
 
 
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <RelativeLayout
-            android:id="@+id/relativeMap"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="46dp"
-                android:text="TEST test"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                android:textStyle="normal|bold" />
-
-            <TextView
-                android:id="@+id/te2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="66dp"
-                android:text="sdfsdfsdfsdf"
-                android:textAlignment="center"
-                android:textSize="25sp" />
-
-
-
-        </RelativeLayout>
-
-        <include layout="@layout/bottom_sheet" />
-
-    </android.support.design.widget.CoordinatorLayout>
-
+    <Button
+        android:id="@+id/btnShowInterstitial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Interstitial" />
 </RelativeLayout>
