--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Interstitial" />
+
+
+    <Button
+        android:id="@+id/btnShowVideo"
+        android:layout_toRightOf="@id/btnShowInterstitial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="VIDEO" />
 </RelativeLayout>
