--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,41 @@
     tools:context=".MainActivity">
 
 
-    <Button
-        android:id="@+id/btnShowInterstitial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Interstitial" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnShowInterstitial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Interstitial" />
+
+        <Button
+            android:id="@+id/btnShowVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/btnShowInterstitial"
+            android:layout_weight="1"
+            android:text="VIDEO" />
+
+        <Button
+            android:id="@+id/btnNextBanner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Banner" />
+    </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btnShowVideo"
-        android:layout_toRightOf="@id/btnShowInterstitial"
-        android:layout_width="wrap_content"
+    <FrameLayout
+
+        android:id="@+id/bannerFrame"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="VIDEO" />
+        android:layout_alignParentBottom="true">
+
+    </FrameLayout>
 </RelativeLayout>
